--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
@@ -14,12 +14,12 @@
     "FileReadError": "Beim Lesen der Datei ist ein Fehler aufgetreten.",
     "DeleteUser": "Benutzer l\u00f6schen",
     "DeleteUserConfirmation": "M\u00f6chtest du {0} wirklich l\u00f6schen?",
-    "PasswordResetHeader": "Reset Password",
+    "PasswordResetHeader": "Passwort zur\u00fccksetzen",
     "PasswordResetComplete": "Das Passwort wurde zur\u00fcckgesetzt.",
-    "PinCodeResetComplete": "The pin code has been reset.",
+    "PinCodeResetComplete": "Der PIN wurde zur\u00fcckgesetzt",
     "PasswordResetConfirmation": "M\u00f6chtest du das Passwort wirklich zur\u00fccksetzen?",
-    "PinCodeResetConfirmation": "Are you sure you wish to reset the pin code?",
-    "HeaderPinCodeReset": "Reset Pin Code",
+    "PinCodeResetConfirmation": "Sind Sie sich sicher, dass Sie Ihren PIN Code zur\u00fccksetzen m\u00f6chten?",
+    "HeaderPinCodeReset": "PIN Code zur\u00fccksetzen",
     "PasswordSaved": "Passwort gespeichert",
     "PasswordMatchError": "Die Passw\u00f6rter m\u00fcssen \u00fcbereinstimmen.",
     "OptionRelease": "Offizielles Release",
@@ -48,10 +48,13 @@
     "LabelFailed": "(fehlgeschlagen)",
     "ButtonHelp": "Hilfe",
     "ButtonSave": "Speichern",
-    "SyncJobStatusQueued": "Queued",
-    "SyncJobStatusInProgress": "In-Progress",
-    "SyncJobStatusCompleted": "Synced",
-    "SyncJobStatusCompletedWithError": "Synced with errors",
+    "SyncJobStatusQueued": "Warten",
+    "SyncJobStatusConverting": "Konvertiere",
+    "SyncJobStatusFailed": "Fehlgeschlagen",
+    "SyncJobStatusCancelled": "Abgebrochen",
+    "SyncJobStatusCompleted": "Synchronisiert",
+    "SyncJobStatusTransferring": "\u00dcbertrage",
+    "SyncJobStatusCompletedWithError": "Synchronisation mit Fehler",
     "LabelCollection": "Sammlung",
     "HeaderAddToCollection": "Zur Sammlung hinzuf\u00fcgen",
     "NewCollectionNameExample": "Beispiel: Star Wars Collection",
@@ -89,9 +92,9 @@
     "LabelFree": "Frei",
     "HeaderSelectAudio": "W\u00e4hle Audio",
     "HeaderSelectSubtitles": "W\u00f6hle Untertitel",
-    "ButtonMarkForRemoval": "Zur L\u00f6schung vom Ger\u00e4t markieren",
-    "ButtonUnmarkForRemoval": "Markierung zur L\u00f6schung vom Ger\u00e4t aufheben",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
+    "ButtonMarkForRemoval": "Entferne von Ger\u00e4t",
+    "ButtonUnmarkForRemoval": "Abbrechen von Entfernen von Ger\u00e4t",
+    "LabelSyncQualityHelp": "Verwenden Sie \"Hohe Qualit\u00e4t\" f\u00fcr die maximale vom Ger\u00e4t unterst\u00fctzte Qualit\u00e4t. Mittlere und geringe Qualit\u00e4t werden die erlaubte Datenrate reduzieren.",
     "LabelDefaultStream": "(Default)",
     "LabelForcedStream": "(Erzwungen)",
     "LabelDefaultForcedStream": "(Standard\/Erzwungen)",
@@ -212,6 +215,8 @@
     "MessageConfirmRestart": "Bist du dir sicher Media Browser Server neustarten zu wollen?",
     "MessageConfirmShutdown": "Bist du dir sicher Media Browser Server herunterfahren zu wollen?",
     "ButtonUpdateNow": "Jetzt aktualisieren",
+    "ValueItemCount": "{0} Eintrag",
+    "ValueItemCountPlural": "{0} Eintr\u00e4ge",
     "NewVersionOfSomethingAvailable": "Eine neue Version von {0} ist verf\u00fcgbar!",
     "VersionXIsAvailableForDownload": "Version {0} ist jetzt bereit zum download.",
     "LabelVersionNumber": "Version {0}",
@@ -677,7 +682,7 @@
     "MessageForgotPasswordFileCreated": "Die folgende Datei wurde auf deinem Server erstellt und enth\u00e4lt eine Anleitung, wie fortgefahren werden muss:",
     "MessageForgotPasswordFileExpiration": "Der Zur\u00fccksetzungs-PIN wird am {0} auslaufen.",
     "MessageInvalidForgotPasswordPin": "Ein ung\u00fcltiger oder abgelaufener PIN wurde eingegeben. Bitte versuche es noch einmal.",
-    "MessagePasswordResetForUsers": "Passwords have been removed for the following users:",
+    "MessagePasswordResetForUsers": "Passw\u00f6rter der folgenden Benutzer wurden entfernt:",
     "HeaderInviteGuest": "Lade G\u00e4ste ein",
     "ButtonLinkMyMediaBrowserAccount": "Verkn\u00fcpfe jetzt meinen Account",
     "MessageConnectAccountRequiredToInviteGuest": "Um G\u00e4ste einladen zu k\u00f6nnen, musst du zuerst deinen Media Browser Account auf diesem Server verkn\u00fcpfen.",
