--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
@@ -49,8 +49,11 @@
     "ButtonHelp": "Ayuda",
     "ButtonSave": "Guardar",
     "SyncJobStatusQueued": "Queued",
-    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusConverting": "Converting",
+    "SyncJobStatusFailed": "Failed",
+    "SyncJobStatusCancelled": "Cancelled",
     "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusTransferring": "Transferring",
     "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Colecci\u00f3n",
     "HeaderAddToCollection": "Agregar a Colecci\u00f3n.",
@@ -89,9 +92,9 @@
     "LabelFree": "Gratis",
     "HeaderSelectAudio": "Seleccionar Audio",
     "HeaderSelectSubtitles": "Seleccionar Subtitulos",
-    "ButtonMarkForRemoval": "Marcado para remover del dispositivo",
-    "ButtonUnmarkForRemoval": "Desmarcar para remover del dispositivo",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
+    "ButtonMarkForRemoval": "Remove from device",
+    "ButtonUnmarkForRemoval": "Cancel removal from device",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate.",
     "LabelDefaultStream": "(Por defecto)",
     "LabelForcedStream": "(Forzado)",
     "LabelDefaultForcedStream": "(Por Defecto\/Forzado)",
@@ -212,6 +215,8 @@
     "MessageConfirmRestart": "\u00bfEst\u00e1 seguro de querer reiniciar el Servidor de Media Browser?",
     "MessageConfirmShutdown": "\u00bfEst\u00e1 seguro de querer apagar el Servidor de Media Browser?",
     "ButtonUpdateNow": "Actualizar Ahora",
+    "ValueItemCount": "{0} item",
+    "ValueItemCountPlural": "{0} items",
     "NewVersionOfSomethingAvailable": "\u00a1Una nueva versi\u00f3n de {0} esta disponible!",
     "VersionXIsAvailableForDownload": "La versi\u00f3n {0} ahora esta disponible para descargar.",
     "LabelVersionNumber": "Versi\u00f3n {0}",
