--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
@@ -49,8 +49,11 @@
     "ButtonHelp": "Aide",
     "ButtonSave": "Sauvegarder",
     "SyncJobStatusQueued": "Mis en file d'attente",
-    "SyncJobStatusInProgress": "En cours",
+    "SyncJobStatusConverting": "Conversion en cours",
+    "SyncJobStatusFailed": "Echec",
+    "SyncJobStatusCancelled": "Annul\u00e9",
     "SyncJobStatusCompleted": "Synchronis\u00e9",
+    "SyncJobStatusTransferring": "Transfert en cours",
     "SyncJobStatusCompletedWithError": "Synchronis\u00e9, mais des erreurs sont apparues",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "Ajouter \u00e0 la collection",
@@ -89,9 +92,9 @@
     "LabelFree": "Gratuit",
     "HeaderSelectAudio": "S\u00e9lectionner audio",
     "HeaderSelectSubtitles": "S\u00e9lectionner sous-titres",
-    "ButtonMarkForRemoval": "Marquer pour suppression dans le disque",
-    "ButtonUnmarkForRemoval": "Lib\u00e9rer la suppression dans le disque",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
+    "ButtonMarkForRemoval": "Supprimer de l'appareil",
+    "ButtonUnmarkForRemoval": "Annuler la suppression de l'appareil",
+    "LabelSyncQualityHelp": "S\u00e9lectionnez Haute qualit\u00e9 pour obtenir la qualit\u00e9 optimale support\u00e9e par l'appareil. Qualit\u00e9 moyenne et basse qualit\u00e9 r\u00e9duiront le d\u00e9bit autoris\u00e9.",
     "LabelDefaultStream": "(Par d\u00e9faut)",
     "LabelForcedStream": "(Forc\u00e9)",
     "LabelDefaultForcedStream": "(Par d\u00e9faut\/Forc\u00e9)",
@@ -212,6 +215,8 @@
     "MessageConfirmRestart": "\u00cates-vous s\u00fbr de vouloir red\u00e9marrer le serveur Media Browser?",
     "MessageConfirmShutdown": "\u00cates-vous s\u00fbr de vouloir \u00e9teindre le serveur Media Browser?",
     "ButtonUpdateNow": "Mettre \u00e0 jour maintenant",
+    "ValueItemCount": "{0} \u00e9l\u00e9ment",
+    "ValueItemCountPlural": "{0} \u00e9l\u00e9ments",
     "NewVersionOfSomethingAvailable": "Une nouvelle version de {0} est disponible!",
     "VersionXIsAvailableForDownload": "La version {0} est maintenant disponible au t\u00e9l\u00e9chargement.",
     "LabelVersionNumber": "Version {0}",
