--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
@@ -49,8 +49,11 @@
     "ButtonHelp": "Help",
     "ButtonSave": "lagre",
     "SyncJobStatusQueued": "Queued",
-    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusConverting": "Converting",
+    "SyncJobStatusFailed": "Failed",
+    "SyncJobStatusCancelled": "Cancelled",
     "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusTransferring": "Transferring",
     "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "Legg Til I Samling",
@@ -91,7 +94,7 @@
     "HeaderSelectSubtitles": "Velg Undertekst",
     "ButtonMarkForRemoval": "Remove from device",
     "ButtonUnmarkForRemoval": "Cancel removal from device",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate.",
     "LabelDefaultStream": "(Standard)",
     "LabelForcedStream": "(Tvunget)",
     "LabelDefaultForcedStream": "(Standard\/Tvunget)",
@@ -212,6 +215,8 @@
     "MessageConfirmRestart": "Er du sikker p\u00e5 at du vil gi Media Browser Server en omstart?",
     "MessageConfirmShutdown": "Er du sikker p\u00e5 du vil sl\u00e5 av Media Browser Server?",
     "ButtonUpdateNow": "Oppdater N\u00e5",
+    "ValueItemCount": "{0} item",
+    "ValueItemCountPlural": "{0} items",
     "NewVersionOfSomethingAvailable": "En ny versjon av {0} er tilgjengelig!",
     "VersionXIsAvailableForDownload": "Vesjon {0} er n\u00e5 tilgjengelig for nedlasting.",
     "LabelVersionNumber": "Versjon {0}",
