--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
@@ -49,8 +49,11 @@
     "ButtonHelp": "Hulp",
     "ButtonSave": "Opslaan",
     "SyncJobStatusQueued": "Queued",
-    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusConverting": "Converting",
+    "SyncJobStatusFailed": "Failed",
+    "SyncJobStatusCancelled": "Cancelled",
     "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusTransferring": "Transferring",
     "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Verzameling",
     "HeaderAddToCollection": "Toevoegen aan verzameling",
@@ -89,9 +92,9 @@
     "LabelFree": "Gratis",
     "HeaderSelectAudio": "Selecteer Audio",
     "HeaderSelectSubtitles": "Selecteer Ondertitels",
-    "ButtonMarkForRemoval": "Markeren voor verwijdering uit het apparaat",
-    "ButtonUnmarkForRemoval": "Niet markeren voor verwijdering uit het apparaat",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
+    "ButtonMarkForRemoval": "Remove from device",
+    "ButtonUnmarkForRemoval": "Cancel removal from device",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate.",
     "LabelDefaultStream": "(Standaard)",
     "LabelForcedStream": "(Geforceerd)",
     "LabelDefaultForcedStream": "(Standaard \/ Georceerd)",
@@ -212,6 +215,8 @@
     "MessageConfirmRestart": "Weet u zeker dat u Media Browser Server wilt herstarten?",
     "MessageConfirmShutdown": "Weet u zeker dat u Media Browser Server wilt afsluiten?",
     "ButtonUpdateNow": "Nu bijwerken",
+    "ValueItemCount": "{0} item",
+    "ValueItemCountPlural": "{0} items",
     "NewVersionOfSomethingAvailable": "Er is een nieuwe versie van {0} beschikbaar!",
     "VersionXIsAvailableForDownload": "Versie {0} is nu beschikbaar voor download.",
     "LabelVersionNumber": "Versie {0}",
