--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -49,8 +49,11 @@
     "ButtonHelp": "Ajuda",
     "ButtonSave": "Salvar",
     "SyncJobStatusQueued": "Enfileirado",
-    "SyncJobStatusInProgress": "Em-Progresso",
+    "SyncJobStatusConverting": "Convertendo",
+    "SyncJobStatusFailed": "Falhou",
+    "SyncJobStatusCancelled": "Cancelado",
     "SyncJobStatusCompleted": "Sincronizado",
+    "SyncJobStatusTransferring": "Transferindo",
     "SyncJobStatusCompletedWithError": "Sincronizado com erros",
     "LabelCollection": "Cole\u00e7\u00e3o",
     "HeaderAddToCollection": "Adicionar \u00e0 Cole\u00e7\u00e3o",
@@ -91,7 +94,7 @@
     "HeaderSelectSubtitles": "Selecione Legendas",
     "ButtonMarkForRemoval": "Remover do dispositivo",
     "ButtonUnmarkForRemoval": "Cancelar remo\u00e7\u00e3o do dispositivo",
-    "LabelSyncQualityHelp": "Use alta qualidade para a qualidade m\u00e1xima suportada pelo dispositivo. M\u00e9dia e Baixa reduzem a taxa permitida.",
+    "LabelSyncQualityHelp": "Use alta qualidade para a qualidade m\u00e1xima suportada pelo dispositivo. Qualidades M\u00e9dia e Baixa reduzem a taxa permitida.",
     "LabelDefaultStream": "(Padr\u00e3o)",
     "LabelForcedStream": "(For\u00e7ada)",
     "LabelDefaultForcedStream": "(Padr\u00e3o\/For\u00e7ada)",
@@ -212,6 +215,8 @@
     "MessageConfirmRestart": "Deseja realmente reiniciar o Servidor Media Browser?",
     "MessageConfirmShutdown": "Deseja realmente desligar o Servidor Media Browser?",
     "ButtonUpdateNow": "Atualizar Agora",
+    "ValueItemCount": "{0} item",
+    "ValueItemCountPlural": "{0} itens",
     "NewVersionOfSomethingAvailable": "Est\u00e1 dispon\u00edvel uma nova vers\u00e3o de {0}!",
     "VersionXIsAvailableForDownload": "A vers\u00e3o {0} est\u00e1 dispon\u00edvel para download.",
     "LabelVersionNumber": "Vers\u00e3o {0}",
