--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/sl_SI.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/sl_SI.json
@@ -1,35 +1,35 @@
 {
-    "SettingsSaved": "Configuraci\u00f3 guardada.",
-    "AddUser": "Afegir Usuari",
-    "Users": "Usuaris",
-    "Delete": "Esborrar",
-    "Administrator": "Administrador",
-    "Password": "Contrasenya",
-    "DeleteImage": "Esborrar Imatge",
+    "SettingsSaved": "Settings saved.",
+    "AddUser": "Add User",
+    "Users": "Users",
+    "Delete": "Delete",
+    "Administrator": "Administrator",
+    "Password": "Password",
+    "DeleteImage": "Delete Image",
     "MessageThankYouForSupporting": "Thank you for supporting Media Browser.",
     "MessagePleaseSupportMediaBrowser": "Please support Media Browser.",
-    "DeleteImageConfirmation": "Esteu segur que voleu suprimir aquesta imatge?",
-    "FileReadCancelled": "La lectura de l'arxiu ha estat cancel\u00b7lada.",
-    "FileNotFound": "Arxiu no trobat.",
-    "FileReadError": "S'ha produ\u00eft un error en llegir el fitxer.",
-    "DeleteUser": "Esborrar Usuari",
+    "DeleteImageConfirmation": "Are you sure you wish to delete this image?",
+    "FileReadCancelled": "The file read has been canceled.",
+    "FileNotFound": "File not found.",
+    "FileReadError": "An error occurred while reading the file.",
+    "DeleteUser": "Delete User",
     "DeleteUserConfirmation": "Are you sure you wish to delete this user?",
     "PasswordResetHeader": "Reset Password",
-    "PasswordResetComplete": "La contrasenya s'ha restablert.",
+    "PasswordResetComplete": "The password has been reset.",
     "PinCodeResetComplete": "The pin code has been reset.",
-    "PasswordResetConfirmation": "Esteu segur que voleu restablir la contrasenya?",
+    "PasswordResetConfirmation": "Are you sure you wish to reset the password?",
     "PinCodeResetConfirmation": "Are you sure you wish to reset the pin code?",
     "HeaderPinCodeReset": "Reset Pin Code",
-    "PasswordSaved": "S'ha guardat la contrasenya.",
-    "PasswordMatchError": "Confirmaci\u00f3 de la contrasenya i la contrasenya han de coincidir.",
-    "OptionRelease": "Versi\u00f3 Oficial",
+    "PasswordSaved": "Password saved.",
+    "PasswordMatchError": "Password and password confirmation must match.",
+    "OptionRelease": "Official Release",
     "OptionBeta": "Beta",
-    "OptionDev": "Dev (Inestable)",
-    "UninstallPluginHeader": "Desinstal\u00b7lar Plugin.",
-    "UninstallPluginConfirmation": "Esteu segur que voleu desinstal\u00b7lar {0}?",
-    "NoPluginConfigurationMessage": "Aquest plugin no necessita configuraci\u00f3.",
-    "NoPluginsInstalledMessage": "No t\u00e9 cap plugin instal\u00b7lat.",
-    "BrowsePluginCatalogMessage": "Consulti el nostre cat\u00e0leg per veure els plugins disponibles.",
+    "OptionDev": "Dev (Unstable)",
+    "UninstallPluginHeader": "Uninstall Plugin",
+    "UninstallPluginConfirmation": "Are you sure you wish to uninstall {0}?",
+    "NoPluginConfigurationMessage": "This plugin has nothing to configure.",
+    "NoPluginsInstalledMessage": "You have no plugins installed.",
+    "BrowsePluginCatalogMessage": "Browse our plugin catalog to view available plugins.",
     "MessageKeyEmailedTo": "Key emailed to {0}.",
     "MessageKeysLinked": "Keys linked.",
     "HeaderConfirmation": "Confirmation",
@@ -42,10 +42,10 @@
     "LabelMovie": "Movie",
     "LabelMusicVideo": "Music Video",
     "LabelEpisode": "Episode",
-    "LabelSeries": "Series",
+    "LabelSeries": "Serije",
     "LabelStopping": "Stopping",
     "LabelCancelled": "(cancelled)",
-    "LabelFailed": "(failed)",
+    "LabelFailed": "(neuspe\u0161no)",
     "ButtonHelp": "Help",
     "ButtonSave": "Save",
     "SyncJobStatusQueued": "Queued",
@@ -108,7 +108,7 @@
     "ButtonPlay": "Play",
     "ButtonEdit": "Edit",
     "ButtonQueue": "Queue",
-    "ButtonPlayTrailer": "Play trailer",
+    "ButtonPlayTrailer": "Predvajaj napovednik",
     "ButtonPlaylist": "Playlist",
     "ButtonPreviousTrack": "Previous Track",
     "LabelEnabled": "Enabled",
@@ -307,8 +307,8 @@
     "MessagePleaseAcceptTermsOfServiceBeforeContinuing": "Please accept the terms of service before continuing.",
     "OptionEnded": "Ended",
     "OptionContinuing": "Continuing",
-    "OptionOff": "Apagat",
-    "OptionOn": "Enc\u00e8s",
+    "OptionOff": "Off",
+    "OptionOn": "On",
     "ButtonSettings": "Settings",
     "ButtonUninstall": "Uninstall",
     "HeaderFields": "Fields",
@@ -365,7 +365,7 @@
     "TabAdvanced": "Advanced",
     "TabHelp": "Help",
     "TabScheduledTasks": "Scheduled Tasks",
-    "ButtonFullscreen": "Fullscreen",
+    "ButtonFullscreen": "Celoten zaslon",
     "ButtonAudioTracks": "Audio Tracks",
     "ButtonSubtitles": "Subtitles",
     "ButtonScenes": "Scenes",
@@ -438,7 +438,7 @@
     "PersonTypePerson": "Person",
     "LabelTitleDisplayOrder": "Title display order:",
     "OptionSortName": "Sort name",
-    "OptionReleaseDate": "Release date",
+    "OptionReleaseDate": "Datum izdaje",
     "LabelSeasonNumber": "Season number:",
     "LabelDiscNumber": "Disc number",
     "LabelParentNumber": "Parent number",
@@ -695,13 +695,13 @@
     "MessageSyncJobCreated": "Sync job created.",
     "LabelSyncTo": "Sync to:",
     "LabelSyncJobName": "Sync job name:",
-    "LabelQuality": "Quality:",
-    "OptionHigh": "High",
-    "OptionMedium": "Medium",
-    "OptionLow": "Low",
-    "HeaderSettings": "Settings",
-    "OptionAutomaticallySyncNewContent": "Automatically sync new content",
-    "OptionAutomaticallySyncNewContentHelp": "New content added to this category will be automatically synced to the device.",
+    "LabelQuality": "Kvaliteta:",
+    "OptionHigh": "Visoka",
+    "OptionMedium": "Srednja",
+    "OptionLow": "Nizka",
+    "HeaderSettings": "Nastavitve",
+    "OptionAutomaticallySyncNewContent": "Samodejno sinhroniziraj nove vsebine",
+    "OptionAutomaticallySyncNewContentHelp": "Nova vsebina, dodana v to kategorijo, bo samodejno sinhronizirana v napravo",
     "OptionSyncUnwatchedVideosOnly": "Sync unwatched videos only",
     "OptionSyncUnwatchedVideosOnlyHelp": "Only unwatched videos will be synced, and videos will be removed from the device as they are watched.",
     "LabelItemLimit": "Item limit:",
