--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/sv.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/sv.json
@@ -49,8 +49,11 @@
     "ButtonHelp": "Hj\u00e4lp",
     "ButtonSave": "Spara",
     "SyncJobStatusQueued": "Queued",
-    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusConverting": "Converting",
+    "SyncJobStatusFailed": "Failed",
+    "SyncJobStatusCancelled": "Cancelled",
     "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusTransferring": "Transferring",
     "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "L\u00e4gg till samling",
@@ -91,7 +94,7 @@
     "HeaderSelectSubtitles": "V\u00e4lj undertexter",
     "ButtonMarkForRemoval": "Remove from device",
     "ButtonUnmarkForRemoval": "Cancel removal from device",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate.",
     "LabelDefaultStream": "(f\u00f6rvalda)",
     "LabelForcedStream": "(tvingade)",
     "LabelDefaultForcedStream": "(f\u00f6rvalda\/tvingade)",
@@ -212,6 +215,8 @@
     "MessageConfirmRestart": "\u00c4r du s\u00e4ker p\u00e5 att du vill starta om Media Browser Server?",
     "MessageConfirmShutdown": "\u00c4r du s\u00e4ker p\u00e5 att du vill st\u00e4nga av Media Browser Server?",
     "ButtonUpdateNow": "Uppdatera nu",
+    "ValueItemCount": "{0} item",
+    "ValueItemCountPlural": "{0} items",
     "NewVersionOfSomethingAvailable": "En ny version av {0} finns tillg\u00e4nglig!",
     "VersionXIsAvailableForDownload": "Version {0} finns tillg\u00e4nglig f\u00f6r h\u00e4mtning.",
     "LabelVersionNumber": "Version {0}",
