--- a/MediaBrowser.Server.Implementations/Localization/Server/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/de.json
@@ -32,7 +32,7 @@
     "LabelEnableVideoImageExtraction": "Aktiviere Videobild-Extrahierung",
     "VideoImageExtractionHelp": "F\u00fcr Videos die noch keien Bilder haben, und f\u00fcr die wir keine Internetbilder finden k\u00f6nnen. Hierdurch wird der erste Bibliothekenscan etwas mehr Zeit beanspruchen, f\u00fchrt aber zu einer ansprechenderen Pr\u00e4sentation.",
     "LabelEnableChapterImageExtractionForMovies": "Extrahiere Kapitelbilder f\u00fcr Filme",
-    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
+    "LabelChapterImageExtractionForMoviesHelp": "Das Extrahieren von Kapitel-Bildern erm\u00f6glicht es den Clients eine grafische Szenenauswahl anzubieten. Das Erstellen ist recht langsam, rechenintensiv und erfordert einige Gigabyte an freien Speicherplatz. Diese Aufgabe startet jede Nacht, das kann aber in den geplanten Aufgaben ge\u00e4ndert werden. Es wird nicht empfohlen diese Aufgabe in Zeiten hoher Server-Auslastung zu starten.",
     "LabelEnableAutomaticPortMapping": "Aktiviere automatische Portweiterleitung",
     "LabelEnableAutomaticPortMappingHelp": "UPnP erm\u00f6glicht die automatische Routerkonfiguration f\u00fcr den einfachen Remote-Zugriff. Diese Option ist nicht f\u00fcr jeden Router verf\u00fcgbar.",
     "HeaderTermsOfService": "Nutzungsbedingungen",
@@ -46,7 +46,7 @@
     "OptionEnableWebClientResourceMinification": "Aktiviere die Ressourcenminimierung des Web Clients",
     "LabelDashboardSourcePath": "Web Client Sourcepfad:",
     "LabelDashboardSourcePathHelp": "Spezifiziere den Pfad zum Dashboard-UI-Verzeichniss, falls der Server von der Source ausgef\u00fchrt wird. Alle Web-Client-Dateien werden von diesem Pfad aus bedient werden.",
-    "ButtonConvertMedia": "Convert media",
+    "ButtonConvertMedia": "Konvertiere Medien",
     "ButtonOrganize": "Organisieren",
     "ButtonOk": "Ok",
     "ButtonCancel": "Abbrechen",
@@ -56,8 +56,8 @@
     "HeaderVideo": "Video",
     "HeaderPaths": "Pfade",
     "CategorySync": "Sync",
-    "HeaderEasyPinCode": "Easy Pin Code",
-    "RegisterWithPayPal": "Register with PayPal",
+    "HeaderEasyPinCode": "Einfacher PIN Code",
+    "RegisterWithPayPal": "Registrieren mit PayPal",
     "HeaderSyncRequiresSupporterMembership": "Synchronisation ben\u00f6tigt eine Supporter-Mitgliedschaft",
     "HeaderEnjoyDayTrial": "Genie\u00dfen Sie eine 14 Tage Testversion",
     "LabelSyncTempPath": "Verzeichnis f\u00fcr tempor\u00e4re Dateien",
@@ -346,7 +346,7 @@
     "LabelAutomaticUpdatesTvdbHelp": "Falls aktviert, werden Bilder die unter TheTVDB.com neu hinzugef\u00fcgt wurden, automatisch geladen. Vorhandene Bilder werden nicht ersetzt.",
     "LabelFanartApiKey": "Pers\u00f6nlicher API Schl\u00fcssel:",
     "LabelFanartApiKeyHelp": "Fanart Anfragen ohne einen pers\u00f6nlichen API Schl\u00fcssel liefert Ergebnisse der letzten 7 Tage. Bei Verwendung eines pers\u00f6nlichen API Schl\u00fcssels werden Ergebnisse der letzten 48 Stunden, und als VIP Member, der letzten 10 Minuten geliefert.",
-    "ExtractChapterImagesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs when videos are discovered, and also as a nightly scheduled task. The schedule is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
+    "ExtractChapterImagesHelp": "Das Extrahieren von Kapitel-Bildern erm\u00f6glicht es den Clients eine grafische Szenenauswahl anzubieten. Das Erstellen ist recht langsam, rechenintensiv und erfordert ggf. einige Gigabyte an freien Speicherplatz. Diese Aufgabe startet wenn neue Videos erkannt werden und ebenso als eine n\u00e4chtliche Aufgabe. Es wird nicht empfohlen diese Aufgabe in Zeiten hoher Server-Auslastung zu starten.",
     "LabelMetadataDownloadLanguage": "Bevorzugte Sprache f\u00fcr Downloads:",
     "ButtonAutoScroll": "Auto-scroll",
     "LabelImageSavingConvention": "Speicherconvention der Bilddatein:",
@@ -669,7 +669,7 @@
     "NotificationOptionInstallationFailed": "Installationsfehler",
     "NotificationOptionNewLibraryContent": "Neuer Inhalt hinzugef\u00fcgt",
     "NotificationOptionNewLibraryContentMultiple": "Neuen Inhalte hinzugef\u00fcgt (mehrere)",
-    "NotificationOptionCameraImageUploaded": "Camera image uploaded",
+    "NotificationOptionCameraImageUploaded": "Kamera Bild hochgeladen",
     "SendNotificationHelp": "Standardm\u00e4\u00dfig werden Benachrichtigungen in der Optionsleiste angezeigt. Durchsuche den Plugin Katalog f\u00fcr die Installation von weiteren Benachrichtigungsm\u00f6glichkeiten.",
     "NotificationOptionServerRestartRequired": "Serverneustart notwendig",
     "LabelNotificationEnabled": "Aktiviere diese Benachrichtigung",
@@ -818,7 +818,7 @@
     "HeaderDownloadSubtitlesFor": "Lade Untertitel runter f\u00fcr",
     "MessageNoChapterProviders": "Installiere ein Plugin f\u00fcr Kapitelinhalte, wie beispielsweise ChapterDb, um weitere Optionen f\u00fcr Kapitel zu erhalten.",
     "LabelSkipIfGraphicalSubsPresent": "\u00dcberspringen, falls das Video bereits grafische Untertitel enth\u00e4lt",
-    "LabelSkipIfGraphicalSubsPresentHelp": "Keeping text versions of subtitles will result in more efficient delivery and decrease the likelihood of video transcoding.",
+    "LabelSkipIfGraphicalSubsPresentHelp": "Das Vorhalten von textbasierten Untertiteln f\u00fchrt zu einer effizienteren Anzeige und verringert die Wahrscheinlichkeit einer Videotranskodierung.",
     "TabSubtitles": "Untertitel",
     "TabChapters": "Kapitel",
     "HeaderDownloadChaptersFor": "Lade Kapitelnamen herunter f\u00fcr:",
@@ -888,7 +888,7 @@
     "OptionCommunityMostWatchedSort": "Meistgesehen",
     "TabNextUp": "Als N\u00e4chstes",
     "HeaderBecomeMediaBrowserSupporter": "Werden Sie ein Media Browser Unterst\u00fctzer",
-    "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
+    "TextEnjoyBonusFeatures": "Erleben Sie Bonus Funktionen",
     "MessageNoMovieSuggestionsAvailable": "Momentan sind keine Filmvorschl\u00e4ge verf\u00fcgbar. Schaue und bewerte zuerst deine Filme. Komme danach zur\u00fcck, um deine Filmvorschl\u00e4ge anzuschauen.",
     "MessageNoCollectionsAvailable": "Sammlungen erlauben Ihnen eine personalisierte Gruppierung von Filmen, Serien, Alben, B\u00fcchern und Spielen. Klicken Sie die + Schaltfl\u00e4che um Sammlungen zu erstellen.",
     "MessageNoPlaylistsAvailable": "Wiedergabeliste erlauben es dir eine Liste mit Inhalt zu erstellen der fortlaufend abgespielt wird. Um einer Wiedergabeliste Inhalte hinzuzuf\u00fcgen klicke rechts oder mache einen langen Tap und w\u00e4hle daraufhin \"Zur Wiedergabeliste hinzuf\u00fcgen\" aus.",
@@ -953,9 +953,9 @@
     "LabelProtocolInfo": "Protokoll Information:",
     "LabelProtocolInfoHelp": "Der Wert, der f\u00fcr die Beantwortung von GetProtocolInfo Anfragen durch die Endger\u00e4te benutzt wird.",
     "TabNfo": "Nfo",
-    "HeaderKodiMetadataHelp": "Media Browser includes native support for Nfo metadata files. To enable or disable Nfo metadata, use the Advanced tab to configure options for your media types.",
+    "HeaderKodiMetadataHelp": "Media Browser unterst\u00fctzt Nfo Metadaten von Haus aus. Zum Ein und Ausschalten der Nfo Metadaten verwenden Sie die Erweiterte Konfiguration ihrer Medientypen.",
     "LabelKodiMetadataUser": "Synchronisiere den \"Gesehen\" Status von Benutzern in NFO's f\u00fcr:",
-    "LabelKodiMetadataUserHelp": "Enable this to keep watch data in sync between Media Browser and Nfo files.",
+    "LabelKodiMetadataUserHelp": "Schalten Sie dies ein um den \"gesehen Status\" in Media Browser und Nfo-Dateien zu synchronisieren.",
     "LabelKodiMetadataDateFormat": "Ver\u00f6ffentlichungsdatum Format:",
     "LabelKodiMetadataDateFormatHelp": "Alle Daten in den NFO's werde unter Benutzung dieses Format gelesen und geschrieben.",
     "LabelKodiMetadataSaveImagePaths": "Speicher Bildpfade innerhalb der NFO Dateien",
@@ -1120,14 +1120,14 @@
     "LabelDisplayFoldersView": "Nutze die Verzeichnissansicht f\u00fcr die Darstellung der reinen Medienordner",
     "ViewTypeLiveTvRecordingGroups": "Aufnahmen",
     "ViewTypeLiveTvChannels": "Kan\u00e4le",
-    "LabelEasyPinCode": "Easy pin code:",
-    "EasyPasswordHelp": "Your easy pin code is used for offline access with supported Media Browser apps, and can also be used for easy in-network sign in.",
-    "LabelInNetworkSignInWithEasyPassword": "Enable in-network sign in with my easy pin code",
-    "LabelInNetworkSignInWithEasyPasswordHelp": "If enabled, you'll be able to use your easy pin code to sign in to Media Browser apps from inside your home network. Your regular password will only be needed away from home. If the pin code is left blank, you won't need a password within your home network.",
+    "LabelEasyPinCode": "Einfacher pin code:",
+    "EasyPasswordHelp": "Ihr einfacher PIN Code wird f\u00fcr den offline Zugriff mit unterst\u00fctzenden Media Browser Apps verwenden und kann ebenso verwendet werden wenn Sie sich im selben Netzwerk befinden.",
+    "LabelInNetworkSignInWithEasyPassword": "Schalte Login mit einfachen Passwort f\u00fcr das eigene Netzwerk ein.",
+    "LabelInNetworkSignInWithEasyPasswordHelp": "Wenn eingeschaltet k\u00f6nnen Sie sich mit Ihrem einfachen PIN innerhalb Ihres Heimnetzwerkes anmelden. Ihr regul\u00e4res Passwort wird nur dann verwendet, wenn Sie nicht Zuhause sind. Wenn Sie dieses Passwort frei lassen ben\u00f6tigen Sie kein Passwort in Ihrem Heimnetzwerk.",
     "HeaderPassword": "Passwort",
     "HeaderLocalAccess": "Lokaler Zugriff",
     "HeaderViewOrder": "Reihenfolge f\u00fcr Ansichten",
-    "ButtonResetEasyPassword": "Reset easy pin code",
+    "ButtonResetEasyPassword": "Einfachen PIN zur\u00fccksetzen",
     "LabelSelectUserViewOrder": "W\u00e4hle die Reihenfolge in der die Ansichten innerhalb von Media Browser Apps angezeigt werden.",
     "LabelMetadataRefreshMode": "Metadaten Aktualisierungsmethode:",
     "LabelImageRefreshMode": "Aktualisierungsmethode f\u00fcr Bilder:",
