--- a/MediaBrowser.Server.Implementations/Localization/Server/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/it.json
@@ -32,7 +32,7 @@
     "LabelEnableVideoImageExtraction": "Abilita estrazione immagine video",
     "VideoImageExtractionHelp": "Per i video che sono sprovvisti di immagini, e per i quali non siamo riusciti a trovare immagini su Internet.Questo aggiunger\u00e0 del tempo addizionale alla scansione della tua libreria ma si tradurr\u00e0 in una presentazione pi\u00f9 piacevole.",
     "LabelEnableChapterImageExtractionForMovies": "Estrazione immagine capitolo estratto per i Film",
-    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
+    "LabelChapterImageExtractionForMoviesHelp": "L'estrazione delle immagini dai capitoli permetter\u00e0 ai client di avere un men\u00f9 grafico per la selezione delle scene. Il processo potrebbe essere lento, con uso intensivo della CPU e potrebbe richiedere diversi gigabyte di spazio. Viene avviato durante la notte, ad ogni modo \u00e8 configurabile nella sezione azioni pianificate. Non \u00e8 raccomandato l'avvio di questo processo durante le ore di massimo utilizzo.",
     "LabelEnableAutomaticPortMapping": "Abilita mappatura delle porte automatiche",
     "LabelEnableAutomaticPortMappingHelp": "UPnP consente la configurazione automatica del router per l'accesso remoto facile. Questo potrebbe non funzionare con alcuni modelli di router.",
     "HeaderTermsOfService": "Termini di servizio di Media Browser",
@@ -346,7 +346,7 @@
     "LabelAutomaticUpdatesTvdbHelp": "Se abilitato le nuove immagini verranno scaricate automaticamente da TheTvDB.com. Le immagini esistenti non verranno sovrascritte.",
     "LabelFanartApiKey": "Chiavi API personali",
     "LabelFanartApiKeyHelp": "I risultati di richieste per fanart senza una chiave API personale che sono state approvate pi\u00f9 di 7 giorni fa. Con una chiave API personale questo tempo scende a 48 ore, e se sei un membro VIP scender\u00e0 ulteriormente a circa 10 minuti.",
-    "ExtractChapterImagesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs when videos are discovered, and also as a nightly scheduled task. The schedule is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
+    "ExtractChapterImagesHelp": "L'estrazione delle immagini dai capitoli permetter\u00e0 ai client di avere un men\u00f9 grafico per la selezione delle scene. Il processo potrebbe essere lento, con uso intensivo della CPU e potrebbe richiedere diversi gigabyte di spazio. Viene avviato quando vengono trovati nuovi video, e anche durante la notte, ad ogni modo \u00e8 configurabile nella sezione azioni pianificate. Non \u00e8 raccomandato l'avvio di questo processo durante le ore di massimo utilizzo.",
     "LabelMetadataDownloadLanguage": "Lingua preferita per il download:",
     "ButtonAutoScroll": "Scorrimento automatico",
     "LabelImageSavingConvention": "Convenzione per il salvataggio di immagini:",
@@ -818,7 +818,7 @@
     "HeaderDownloadSubtitlesFor": "Scarica sottotitoli per:",
     "MessageNoChapterProviders": "Installare un plugin provider capitoli come ChapterDb per attivare le opzioni capitolo aggiuntive.",
     "LabelSkipIfGraphicalSubsPresent": "Salta se il video contiene gi\u00e0 i sottotitoli grafici",
-    "LabelSkipIfGraphicalSubsPresentHelp": "Keeping text versions of subtitles will result in more efficient delivery and decrease the likelihood of video transcoding.",
+    "LabelSkipIfGraphicalSubsPresentHelp": "Mantenere le versioni testuali dei sottotitoli si tradurr\u00e0 in una riproduzione pi\u00f9 efficiente e diminuir\u00e0 la probabilit\u00e0 che sia necessaria la transcodifica video",
     "TabSubtitles": "Sottotitoli",
     "TabChapters": "capitoli",
     "HeaderDownloadChaptersFor": "Scarica i nomi dei capitoli per:",
@@ -953,9 +953,9 @@
     "LabelProtocolInfo": "Info protocollo:",
     "LabelProtocolInfoHelp": "Il valore che verr\u00e0 utilizzato quando si risponde a richieste GetProtocolInfo dal dispositivo.",
     "TabNfo": "Nfo",
-    "HeaderKodiMetadataHelp": "Media Browser includes native support for Nfo metadata files. To enable or disable Nfo metadata, use the Advanced tab to configure options for your media types.",
+    "HeaderKodiMetadataHelp": "Media Browser include il supporto nativo per i file metadati in formato Nfo. Per abilitare o disabilitare i metadati Nfo, utilizzare la sezione Avanzate per configurare le opzioni per i vostri tipi di file multimediali.",
     "LabelKodiMetadataUser": "Sincronizza i dati utente a nfo di per:",
-    "LabelKodiMetadataUserHelp": "Enable this to keep watch data in sync between Media Browser and Nfo files.",
+    "LabelKodiMetadataUserHelp": "Abilita questa opzione per tenere sincronizzati Media Browser e il file Nfo.",
     "LabelKodiMetadataDateFormat": "Data di uscita Formato:",
     "LabelKodiMetadataDateFormatHelp": "Tutte le date all'interno del nfo verranno letti e scritti utilizzando questo formato.",
     "LabelKodiMetadataSaveImagePaths": "Salva percorsi delle immagini all'interno dei file NFO",
@@ -966,7 +966,7 @@
     "LabelGroupChannelsIntoViews": "Visualizzare i seguenti canali direttamente dentro le mie visite:",
     "LabelGroupChannelsIntoViewsHelp": "Se abilitata, questi canali verranno visualizzati direttamente con altre viste. Se disattivato, saranno visualizzati all'interno di una sezione Canali separata.",
     "LabelDisplayCollectionsView": "Mostra le Collezioni di film",
-    "LabelDisplayCollectionsViewHelp": "This will create a separate view to display collections that you've created or have access to. To create a collection, right-click or tap-hold any movie and select 'Add to Collection'. ",
+    "LabelDisplayCollectionsViewHelp": "Questo creer\u00e0 una vista separata per le collezioni che si ha creato o alle quali si ha accesso. Per creare una collezione, cliccare con il tasto destro o effettuare un tocco prolungato su un film e selezionare \"Aggiungi alla collezione\" .",
     "LabelKodiMetadataEnableExtraThumbs": "Copia extrafanart in extrathumbs",
     "LabelKodiMetadataEnableExtraThumbsHelp": "Copia extrafanart in extrathumbs",
     "TabServices": "Servizi",
@@ -1120,14 +1120,14 @@
     "LabelDisplayFoldersView": "Visualizza cartelle come normali cartelle dei media",
     "ViewTypeLiveTvRecordingGroups": "Registrazioni",
     "ViewTypeLiveTvChannels": "canali",
-    "LabelEasyPinCode": "Easy pin code:",
-    "EasyPasswordHelp": "Your easy pin code is used for offline access with supported Media Browser apps, and can also be used for easy in-network sign in.",
-    "LabelInNetworkSignInWithEasyPassword": "Enable in-network sign in with my easy pin code",
-    "LabelInNetworkSignInWithEasyPasswordHelp": "If enabled, you'll be able to use your easy pin code to sign in to Media Browser apps from inside your home network. Your regular password will only be needed away from home. If the pin code is left blank, you won't need a password within your home network.",
+    "LabelEasyPinCode": "Codice Pin",
+    "EasyPasswordHelp": "Il tuo codice PIN viene usato per l'acceso offline alle app che supportano Media Browser, e pu\u00f2 anche essere utilizzato per un facile accesso tramite la rete locale.",
+    "LabelInNetworkSignInWithEasyPassword": "Abilita l'accesso da rete locale tramite codice PIN.",
+    "LabelInNetworkSignInWithEasyPasswordHelp": "se attivato, potrai usare il tuo pin per accedere alle app Media Browser dall'interno della tua rete domestica, La tua password sara necessaria soltanto quando accederai da fuori casa. Se il codice PIN viene lasciato in bianco, non avrai bisogno di alcuna password all'interno della tua rete domestica.",
     "HeaderPassword": "Password",
     "HeaderLocalAccess": "Accesso locale",
     "HeaderViewOrder": "Visualizza ordine",
-    "ButtonResetEasyPassword": "Reset easy pin code",
+    "ButtonResetEasyPassword": "Resetta codice PIN",
     "LabelSelectUserViewOrder": "Scegliere l'ordine vostre opinioni verranno visualizzati in applicazioni all'interno del browser media",
     "LabelMetadataRefreshMode": "Metadata (modo Aggiornamento)",
     "LabelImageRefreshMode": "Immagine (modo Aggiornamento)",
@@ -1316,7 +1316,7 @@
     "MessageNoTrailersFound": "Nessun Trailer trovato.Installa Il plug in dei trailer per importare la libreria dei trailer da internet",
     "HeaderNewUsers": "Nuovo Utente",
     "ButtonSignUp": "Iscriviti",
-    "ButtonForgotPassword": "Forgot password",
+    "ButtonForgotPassword": "Password Dimenticata",
     "OptionDisableUserPreferences": "Disabilitare l'accesso alle preferenze dell'utente",
     "OptionDisableUserPreferencesHelp": "Se abilitato, solo gli amministratori saranno in grado di configurare le immagini del profilo utente, password e preferenze di lingua.",
     "HeaderSelectServer": "Selezionare il server",
