--- a/MediaBrowser.Server.Implementations/Localization/Server/sl_SI.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/sl_SI.json
@@ -47,7 +47,7 @@
     "LabelDashboardSourcePath": "Web client source path:",
     "LabelDashboardSourcePathHelp": "If running the server from source, specify the path to the dashboard-ui folder. All web client files will be served from this location.",
     "ButtonConvertMedia": "Convert media",
-    "ButtonOrganize": "Organise",
+    "ButtonOrganize": "Organize",
     "ButtonOk": "Ok",
     "ButtonCancel": "Cancel",
     "ButtonNew": "New",
@@ -159,7 +159,7 @@
     "HeaderUsers": "Users",
     "HeaderFilters": "Filters:",
     "ButtonFilter": "Filter",
-    "OptionFavorite": "Favourites",
+    "OptionFavorite": "Favorites",
     "OptionLikes": "Likes",
     "OptionDislikes": "Dislikes",
     "OptionActors": "Actors",
@@ -303,7 +303,7 @@
     "PismoMessage": "Utilizing Pismo File Mount through a donated license.",
     "TangibleSoftwareMessage": "Utilizing Tangible Solutions Java\/C# converters through a donated license.",
     "HeaderCredits": "Credits",
-    "PleaseSupportOtherProduces": "Please support other free products we utilise:",
+    "PleaseSupportOtherProduces": "Please support other free products we utilize:",
     "VersionNumber": "Version {0}",
     "TabPaths": "Paths",
     "TabServer": "Server",
@@ -350,7 +350,7 @@
     "LabelMetadataDownloadLanguage": "Preferred download language:",
     "ButtonAutoScroll": "Auto-scroll",
     "LabelImageSavingConvention": "Image saving convention:",
-    "LabelImageSavingConventionHelp": "Media Browser recognises images from most major media applications. Choosing your downloading convention is useful if you also use other products.",
+    "LabelImageSavingConventionHelp": "Media Browser recognizes images from most major media applications. Choosing your downloading convention is useful if you also use other products.",
     "OptionImageSavingCompatible": "Compatible - Media Browser\/Kodi\/Plex",
     "OptionImageSavingStandard": "Standard - MB2",
     "ButtonSignIn": "Sign In",
@@ -367,7 +367,7 @@
     "TabRecordings": "Recordings",
     "TabScheduled": "Scheduled",
     "TabSeries": "Series",
-    "TabFavorites": "Favourites",
+    "TabFavorites": "Favorites",
     "TabMyLibrary": "My Library",
     "ButtonCancelRecording": "Cancel Recording",
     "HeaderPrePostPadding": "Pre\/Post Padding",
@@ -383,8 +383,8 @@
     "ButtonRefresh": "Refresh",
     "ButtonAdvancedRefresh": "Advanced Refresh",
     "OptionPriority": "Priority",
-    "OptionRecordOnAllChannels": "Record programme on all channels",
-    "OptionRecordAnytime": "Record programme at any time",
+    "OptionRecordOnAllChannels": "Record program on all channels",
+    "OptionRecordAnytime": "Record program at any time",
     "OptionRecordOnlyNewEpisodes": "Record only new episodes",
     "HeaderDays": "Days",
     "HeaderActiveRecordings": "Active Recordings",
@@ -549,7 +549,7 @@
     "LabelMinResumePercentageHelp": "Titles are assumed unplayed if stopped before this time",
     "LabelMaxResumePercentageHelp": "Titles are assumed fully played if stopped after this time",
     "LabelMinResumeDurationHelp": "Titles shorter than this will not be resumable",
-    "TitleAutoOrganize": "Auto-Organise",
+    "TitleAutoOrganize": "Auto-Organize",
     "TabActivityLog": "Activity Log",
     "HeaderName": "Name",
     "HeaderDate": "Date",
@@ -560,7 +560,7 @@
     "LabelCompleted": "Completed",
     "LabelFailed": "Failed",
     "LabelSkipped": "Skipped",
-    "HeaderEpisodeOrganization": "Episode Organisation",
+    "HeaderEpisodeOrganization": "Episode Organization",
     "LabelSeries": "Series:",
     "LabelSeasonNumber": "Season number:",
     "LabelEpisodeNumber": "Episode number:",
@@ -571,11 +571,11 @@
     "HeaderSupportTheTeamHelp": "Help ensure the continued development of this project by donating. A portion of all donations will be contributed to other free tools we depend on.",
     "ButtonEnterSupporterKey": "Enter supporter key",
     "DonationNextStep": "Once complete, please return and enter your supporter key, which you will receive by email.",
-    "AutoOrganizeHelp": "Auto-organise monitors your download folders for new files and moves them to your media directories",
-    "AutoOrganizeTvHelp": "TV file organising will only add episodes to existing series. It will not create new series folders.",
-    "OptionEnableEpisodeOrganization": "Enable new episode organisation",
+    "AutoOrganizeHelp": "Auto-organize monitors your download folders for new files and moves them to your media directories.",
+    "AutoOrganizeTvHelp": "TV file organizing will only add episodes to existing series. It will not create new series folders.",
+    "OptionEnableEpisodeOrganization": "Enable new episode organization",
     "LabelWatchFolder": "Watch folder:",
-    "LabelWatchFolderHelp": "The server will poll this folder during the 'Organise new media files' scheduled task.",
+    "LabelWatchFolderHelp": "The server will poll this folder during the 'Organize new media files' scheduled task.",
     "ButtonViewScheduledTasks": "View scheduled tasks",
     "LabelMinFileSizeForOrganize": "Minimum file size (MB):",
     "LabelMinFileSizeForOrganizeHelp": "Files under this size will be ignored.",
@@ -798,7 +798,7 @@
     "HeaderIdentificationCriteriaHelp": "Enter at least one identification criteria.",
     "HeaderDirectPlayProfileHelp": "Add direct play profiles to indicate which formats the device can handle natively.",
     "HeaderTranscodingProfileHelp": "Add transcoding profiles to indicate which formats should be used when transcoding is required.",
-    "HeaderResponseProfileHelp": "Response profiles provide a way to customise information sent to the device when playing certain kinds of media.",
+    "HeaderResponseProfileHelp": "Response profiles provide a way to customize information sent to the device when playing certain kinds of media.",
     "LabelXDlnaCap": "X-Dlna cap:",
     "LabelXDlnaCapHelp": "Determines the content of the X_DLNACAP element in the urn:schemas-dlna-org:device-1-0 namespace.",
     "LabelXDlnaDoc": "X-Dlna doc:",
@@ -918,7 +918,7 @@
     "ViewTypeLiveTvNowPlaying": "Now Airing",
     "ViewTypeLatestGames": "Latest Games",
     "ViewTypeRecentlyPlayedGames": "Recently Played",
-    "ViewTypeGameFavorites": "Favourites",
+    "ViewTypeGameFavorites": "Favorites",
     "ViewTypeGameSystems": "Game Systems",
     "ViewTypeGameGenres": "Genres",
     "ViewTypeTvResume": "Resume",
@@ -926,23 +926,23 @@
     "ViewTypeTvLatest": "Latest",
     "ViewTypeTvShowSeries": "Series",
     "ViewTypeTvGenres": "Genres",
-    "ViewTypeTvFavoriteSeries": "Favourite Series",
-    "ViewTypeTvFavoriteEpisodes": "Favourite Episodes",
+    "ViewTypeTvFavoriteSeries": "Favorite Series",
+    "ViewTypeTvFavoriteEpisodes": "Favorite Episodes",
     "ViewTypeMovieResume": "Resume",
     "ViewTypeMovieLatest": "Latest",
     "ViewTypeMovieMovies": "Movies",
     "ViewTypeMovieCollections": "Collections",
-    "ViewTypeMovieFavorites": "Favourites",
+    "ViewTypeMovieFavorites": "Favorites",
     "ViewTypeMovieGenres": "Genres",
     "ViewTypeMusicLatest": "Latest",
     "ViewTypeMusicAlbums": "Albums",
     "ViewTypeMusicAlbumArtists": "Album Artists",
     "HeaderOtherDisplaySettings": "Display Settings",
     "ViewTypeMusicSongs": "Songs",
-    "ViewTypeMusicFavorites": "Favourites",
-    "ViewTypeMusicFavoriteAlbums": "Favourite Albums",
-    "ViewTypeMusicFavoriteArtists": "Favourite Artists",
-    "ViewTypeMusicFavoriteSongs": "Favourite Songs",
+    "ViewTypeMusicFavorites": "Favorites",
+    "ViewTypeMusicFavoriteAlbums": "Favorite Albums",
+    "ViewTypeMusicFavoriteArtists": "Favorite Artists",
+    "ViewTypeMusicFavoriteSongs": "Favorite Songs",
     "HeaderMyViews": "My Views",
     "LabelSelectFolderGroups": "Automatically group content from the following folders into views such as Movies, Music and TV:",
     "LabelSelectFolderGroupsHelp": "Folders that are unchecked will be displayed by themselves in their own view.",
@@ -973,7 +973,7 @@
     "TabLogs": "Logs",
     "HeaderServerLogFiles": "Server log files:",
     "TabBranding": "Branding",
-    "HeaderBrandingHelp": "Customise the appearance of Media Browser to fit the needs of your group or organisation.",
+    "HeaderBrandingHelp": "Customize the appearance of Media Browser to fit the needs of your group or organization.",
     "LabelLoginDisclaimer": "Login disclaimer:",
     "LabelLoginDisclaimerHelp": "This will be displayed at the bottom of the login page.",
     "LabelAutomaticallyDonate": "Automatically donate this amount every month",
