--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/bg_BG.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/bg_BG.json
@@ -49,8 +49,11 @@
     "ButtonHelp": "\u041f\u043e\u043c\u043e\u0449",
     "ButtonSave": "\u0417\u0430\u043f\u043e\u043c\u043d\u0438",
     "SyncJobStatusQueued": "Queued",
-    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusConverting": "Converting",
+    "SyncJobStatusFailed": "Failed",
+    "SyncJobStatusCancelled": "Cancelled",
     "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusTransferring": "Transferring",
     "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "Add to Collection",
@@ -91,7 +94,7 @@
     "HeaderSelectSubtitles": "Select Subtitles",
     "ButtonMarkForRemoval": "Remove from device",
     "ButtonUnmarkForRemoval": "Cancel removal from device",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate.",
     "LabelDefaultStream": "(Default)",
     "LabelForcedStream": "(Forced)",
     "LabelDefaultForcedStream": "(Default\/Forced)",
@@ -212,6 +215,8 @@
     "MessageConfirmRestart": "Are you sure you wish to restart Media Browser Server?",
     "MessageConfirmShutdown": "Are you sure you wish to shutdown Media Browser Server?",
     "ButtonUpdateNow": "Update Now",
+    "ValueItemCount": "{0} item",
+    "ValueItemCountPlural": "{0} items",
     "NewVersionOfSomethingAvailable": "A new version of {0} is available!",
     "VersionXIsAvailableForDownload": "Version {0} is now available for download.",
     "LabelVersionNumber": "Version {0}",
