--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es.json
@@ -49,8 +49,11 @@
     "ButtonHelp": "Help",
     "ButtonSave": "Grabar",
     "SyncJobStatusQueued": "Queued",
-    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusConverting": "Converting",
+    "SyncJobStatusFailed": "Failed",
+    "SyncJobStatusCancelled": "Cancelled",
     "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusTransferring": "Transferring",
     "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "A\u00f1adir a la colecci\u00f3n",
@@ -91,7 +94,7 @@
     "HeaderSelectSubtitles": "Seleccionar Subt\u00edtulos",
     "ButtonMarkForRemoval": "Remove from device",
     "ButtonUnmarkForRemoval": "Cancel removal from device",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate.",
     "LabelDefaultStream": "(Por defecto)",
     "LabelForcedStream": "(Forzado)",
     "LabelDefaultForcedStream": "(Por defecto\/Forzado)",
@@ -212,6 +215,8 @@
     "MessageConfirmRestart": "\u00bfEst\u00e1 seguro que desea reiniciar Media Browser Server?",
     "MessageConfirmShutdown": "\u00bfEst\u00e1 seguro que desea apagar Media Browser Server?",
     "ButtonUpdateNow": "Actualizar ahora",
+    "ValueItemCount": "{0} item",
+    "ValueItemCountPlural": "{0} items",
     "NewVersionOfSomethingAvailable": "\u00a1Hay disponible una nueva versi\u00f3n de {0}!",
     "VersionXIsAvailableForDownload": "La versi\u00f3n {0} est\u00e1 disponible para su descarga.",
     "LabelVersionNumber": "Versi\u00f3n {0}",
