--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/it.json
@@ -6,8 +6,8 @@
     "Administrator": "Amministratore",
     "Password": "Password",
     "DeleteImage": "Elimina immagine",
-    "MessageThankYouForSupporting": "Thank you for supporting Media Browser.",
-    "MessagePleaseSupportMediaBrowser": "Please support Media Browser.",
+    "MessageThankYouForSupporting": "Grazie per supportare Media Browser",
+    "MessagePleaseSupportMediaBrowser": "Per favore supporta Media Browser",
     "DeleteImageConfirmation": "Sei sicuro di voler eliminare questa immagine?",
     "FileReadCancelled": "Il file letto \u00e8 stato cancellato.",
     "FileNotFound": "File non trovato",
@@ -16,10 +16,10 @@
     "DeleteUserConfirmation": "Sei sicuro di voler eliminare questo utente",
     "PasswordResetHeader": "Ripristina Password",
     "PasswordResetComplete": "la password \u00e8 stata ripristinata.",
-    "PinCodeResetComplete": "The pin code has been reset.",
+    "PinCodeResetComplete": "Il codice PIN \u00e8 stato resettato",
     "PasswordResetConfirmation": "Sei sicuro di voler ripristinare la password?",
-    "PinCodeResetConfirmation": "Are you sure you wish to reset the pin code?",
-    "HeaderPinCodeReset": "Reset Pin Code",
+    "PinCodeResetConfirmation": "Sei sicuro di voler resettare il codice PIN?",
+    "HeaderPinCodeReset": "Resetta il codice PIN",
     "PasswordSaved": "Password salvata.",
     "PasswordMatchError": "Le password non coincidono.",
     "OptionRelease": "Versione Ufficiale",
@@ -37,7 +37,7 @@
     "MessageKeyRemoved": "Grazie. La vostra chiave supporter \u00e8 stata rimossa.",
     "ErrorLaunchingChromecast": "Si \u00e8 verificato un errore all'avvio di chromecast. Assicurati che il tuo dispositivo sia connesso alla rete wireless.",
     "HeaderSearch": "Ricerca",
-    "ValueDateCreated": "Date created: {0}",
+    "ValueDateCreated": "Data di creazione {0}",
     "LabelArtist": "Artista",
     "LabelMovie": "Film",
     "LabelMusicVideo": "Video Musicali",
@@ -48,21 +48,24 @@
     "LabelFailed": "(fallito)",
     "ButtonHelp": "Aiuto",
     "ButtonSave": "Salva",
-    "SyncJobStatusQueued": "Queued",
-    "SyncJobStatusInProgress": "In-Progress",
-    "SyncJobStatusCompleted": "Synced",
-    "SyncJobStatusCompletedWithError": "Synced with errors",
-    "LabelCollection": "Collection",
+    "SyncJobStatusQueued": "In Coda",
+    "SyncJobStatusConverting": "Conversione",
+    "SyncJobStatusFailed": "Fallito",
+    "SyncJobStatusCancelled": "Cancellato",
+    "SyncJobStatusCompleted": "Sinc.to",
+    "SyncJobStatusTransferring": "Trasferimento",
+    "SyncJobStatusCompletedWithError": "Sincronizzato con errori",
+    "LabelCollection": "Collezione",
     "HeaderAddToCollection": "Aggiungi alla Collezione",
     "NewCollectionNameExample": "Esempio: Collezione Star wars",
     "OptionSearchForInternetMetadata": "Cerca su internet le immagini e i metadati",
     "LabelSelectCollection": "Seleziona Collezione:",
     "HeaderDevices": "Dispositivi",
-    "ButtonScheduledTasks": "Scheduled tasks",
-    "MessageItemsAdded": "Items added",
-    "ButtonAddToCollection": "Add to collection",
-    "HeaderSelectCertificatePath": "Select Certificate Path",
-    "ConfirmMessageScheduledTaskButton": "This operation normally runs automatically as a scheduled task. It can also be run manually here. To configure the scheduled task, see:",
+    "ButtonScheduledTasks": "Operazioni Pianificate",
+    "MessageItemsAdded": "Oggetti aggiunti",
+    "ButtonAddToCollection": "Aggiungi alla collezione",
+    "HeaderSelectCertificatePath": "Seleziona il percorso del Certificato",
+    "ConfirmMessageScheduledTaskButton": "L'operazione viene normalmente eseguita come operazione pianificata. Pu\u00f2 anche essere avviata manualmente da qui. Per configurare le operazioni pianificate, vedi:",
     "HeaderSupporterBenefit": "La sottoscrizione Supporter concede dei benefici come: l'accesso a plug-in premium, contenuti dei canali internet, e altro. {0}Scopri di pi\u00f9{1}",
     "HeaderWelcomeToMediaBrowserServerDashboard": "Benvenuti nel Dashboard di Media Browser",
     "HeaderWelcomeToMediaBrowserWebClient": "Benvenuti nel Media Browser Web client",
@@ -74,10 +77,10 @@
     "HeaderChannelAccess": "Accesso canali",
     "HeaderDeviceAccess": "Accesso dispositivo",
     "HeaderSelectDevices": "Seleziona periferiche",
-    "ButtonCancelItem": "Cancel item",
-    "ButtonQueueForRetry": "Queue for retry",
-    "ButtonReenable": "Re-enable",
-    "SyncJobItemStatusSyncedMarkForRemoval": "Marked for removal",
+    "ButtonCancelItem": "Cancella oggetto",
+    "ButtonQueueForRetry": "In attesa di riprovare",
+    "ButtonReenable": "Ri-abilita",
+    "SyncJobItemStatusSyncedMarkForRemoval": "Selezionato per la rimozione",
     "LabelAbortedByServerShutdown": "(Interrotto dallo spegnimento del server)",
     "LabelScheduledTaskLastRan": "Ultima esecuzione  {0}, taking {1}.",
     "HeaderDeleteTaskTrigger": "Elimina Operazione pianificata",
@@ -89,14 +92,14 @@
     "LabelFree": "Gratis",
     "HeaderSelectAudio": "Seleziona audio",
     "HeaderSelectSubtitles": "Seleziona sottotitoli",
-    "ButtonMarkForRemoval": "Remove from device",
-    "ButtonUnmarkForRemoval": "Cancel removal from device",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
+    "ButtonMarkForRemoval": "Rimuovi dal dispositivo",
+    "ButtonUnmarkForRemoval": "Annulla rimozione dal dispositivo",
+    "LabelSyncQualityHelp": "Usa qualit\u00e0 alta come livello di qualit\u00e0 massimo per il dispositivo. Media e bassa diminuiranno il bitrate consentito",
     "LabelDefaultStream": "(Predefinito)",
     "LabelForcedStream": "(forzato)",
     "LabelDefaultForcedStream": "(Predefinito\/Forzato)",
     "LabelUnknownLanguage": "Lingua Sconosciuta",
-    "MessageConfirmSyncJobItemCancellation": "Are you sure you wish to cancel this item?",
+    "MessageConfirmSyncJobItemCancellation": "Sei sicuro di voler cancellare questo elemento?",
     "ButtonMute": "Muto",
     "ButtonUnmute": "Togli muto",
     "ButtonStop": "Stop",
@@ -212,6 +215,8 @@
     "MessageConfirmRestart": "Sei sicuro di voler riavviare Media Browser Server?",
     "MessageConfirmShutdown": "Sei sicuro di voler Spegnere Media Browser Server?",
     "ButtonUpdateNow": "Aggiorna Adesso",
+    "ValueItemCount": "{0} elemento",
+    "ValueItemCountPlural": "{0} elementi",
     "NewVersionOfSomethingAvailable": "Una nuova versione di {0} \u00e8 disponibile!",
     "VersionXIsAvailableForDownload": "Versione {0} \u00e8 ora disponibile per il download.",
     "LabelVersionNumber": "Versione {0}",
@@ -220,10 +225,10 @@
     "LabelPlayMethodDirectPlay": "Riproduzione Diretta",
     "LabelAudioCodec": "Audio: {0}",
     "LabelVideoCodec": "Video: {0}",
-    "LabelLocalAccessUrl": "Local access: {0}",
+    "LabelLocalAccessUrl": "Accesso locale {0}",
     "LabelRemoteAccessUrl": "Accesso remoto: {0}",
-    "LabelRunningOnPort": "Running on http port {0}.",
-    "LabelRunningOnPorts": "Running on http port {0}, and https port {1}.",
+    "LabelRunningOnPort": "In esecuzione sulla porta HTTP {0}.",
+    "LabelRunningOnPorts": "In esecuzione sulla porta HTTP {0}, e porta HTTPS {1}",
     "HeaderLatestFromChannel": "Ultime da {0}",
     "ButtonDownload": "Download",
     "LabelUnknownLanaguage": "lingua sconosciuta",
@@ -237,7 +242,7 @@
     "ButtonRefresh": "Aggiorna",
     "LabelCurrentPath": "Percorso Corrente:",
     "HeaderSelectMediaPath": "Seleziona il percorso",
-    "HeaderSelectPath": "Select Path",
+    "HeaderSelectPath": "Seleziona Percorso",
     "ButtonNetwork": "Rete",
     "MessageDirectoryPickerInstruction": "Percorsi di rete possono essere inseriti manualmente nel caso in cui il pulsante Rete non riesce a individuare i vostri dispositivi. Ad esempio, {0} o {1}",
     "HeaderMenu": "Menu",
@@ -248,7 +253,7 @@
     "ButtonResume": "Riprendi",
     "HeaderScenes": "Scene",
     "HeaderAudioTracks": "Tracce audio",
-    "HeaderLibraries": "Libraries",
+    "HeaderLibraries": "Librerie",
     "HeaderSubtitles": "Sottotitoli",
     "HeaderVideoQuality": "Qualit\u00e0 video",
     "MessageErrorPlayingVideo": "Si \u00e8 verificato un errore nella riproduzione del video.",
@@ -615,7 +620,7 @@
     "MediaInfoRefFrames": "Ref frames",
     "TabPlayback": "Riproduzione",
     "TabNotifications": "Notifiche",
-    "TabExpert": "Expert",
+    "TabExpert": "Esperto",
     "HeaderSelectCustomIntrosPath": "Selezionare Intro Path Personalizzata",
     "HeaderRateAndReview": "Punteggio e Commenti",
     "HeaderThankYou": "Grazie",
@@ -650,7 +655,7 @@
     "DashboardTourMobile": "Il cruscotto Media Browser funziona alla grande su smartphone e tablet. Gestisci il tuo server dal palmo della tua mano in qualsiasi momento, ovunque.",
     "MessageRefreshQueued": "Aggiornamento programmato",
     "TabDevices": "Dispositivi",
-    "TabExtras": "Extras",
+    "TabExtras": "Extra",
     "DeviceLastUsedByUserName": "Ultimo utilizzata da {0}",
     "HeaderDeleteDevice": "Elimina dispositivo",
     "DeleteDeviceConfirmation": "Sei sicuro di voler cancellare questo dispositivo? Esso riapparir\u00e0 la prossima volta che un utente accede con esso.",
@@ -677,7 +682,7 @@
     "MessageForgotPasswordFileCreated": "Il seguente file \u00e8 stato creato sul server e contiene le istruzioni su come procedere:",
     "MessageForgotPasswordFileExpiration": "Il pin scadr\u00e0 {0}.",
     "MessageInvalidForgotPasswordPin": "Un pin Invalido o scaduto \u00e8 stato inserito. Riprova.",
-    "MessagePasswordResetForUsers": "Passwords have been removed for the following users:",
+    "MessagePasswordResetForUsers": "Le password per i seguenti utenti sono state rimosse:",
     "HeaderInviteGuest": "Invita Ospite",
     "ButtonLinkMyMediaBrowserAccount": "Collega il mio account",
     "MessageConnectAccountRequiredToInviteGuest": "Per invitare gli ospiti \u00e8 necessario collegare prima il tuo account browser media a questo server.",
