--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/uk.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/uk.json
@@ -49,8 +49,11 @@
     "ButtonHelp": "Help",
     "ButtonSave": "\u0417\u0431\u0435\u0440\u0456\u0433\u0442\u0438",
     "SyncJobStatusQueued": "Queued",
-    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusConverting": "Converting",
+    "SyncJobStatusFailed": "Failed",
+    "SyncJobStatusCancelled": "Cancelled",
     "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusTransferring": "Transferring",
     "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "Collection",
     "HeaderAddToCollection": "\u0414\u043e\u0434\u0430\u0442\u0438 \u0434\u043e \u043a\u043e\u043b\u0435\u043a\u0446\u0456\u0457",
@@ -91,7 +94,7 @@
     "HeaderSelectSubtitles": "Select Subtitles",
     "ButtonMarkForRemoval": "Remove from device",
     "ButtonUnmarkForRemoval": "Cancel removal from device",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate.",
     "LabelDefaultStream": "(Default)",
     "LabelForcedStream": "(Forced)",
     "LabelDefaultForcedStream": "(Default\/Forced)",
@@ -212,6 +215,8 @@
     "MessageConfirmRestart": "Are you sure you wish to restart Media Browser Server?",
     "MessageConfirmShutdown": "Are you sure you wish to shutdown Media Browser Server?",
     "ButtonUpdateNow": "Update Now",
+    "ValueItemCount": "{0} item",
+    "ValueItemCountPlural": "{0} items",
     "NewVersionOfSomethingAvailable": "A new version of {0} is available!",
     "VersionXIsAvailableForDownload": "Version {0} is now available for download.",
     "LabelVersionNumber": "Version {0}",
