--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/zh_CN.json
@@ -49,8 +49,11 @@
     "ButtonHelp": "Help",
     "ButtonSave": "\u50a8\u5b58",
     "SyncJobStatusQueued": "Queued",
-    "SyncJobStatusInProgress": "In-Progress",
+    "SyncJobStatusConverting": "Converting",
+    "SyncJobStatusFailed": "Failed",
+    "SyncJobStatusCancelled": "Cancelled",
     "SyncJobStatusCompleted": "Synced",
+    "SyncJobStatusTransferring": "Transferring",
     "SyncJobStatusCompletedWithError": "Synced with errors",
     "LabelCollection": "\u5408\u96c6",
     "HeaderAddToCollection": "\u52a0\u5165\u5408\u96c6",
@@ -89,9 +92,9 @@
     "LabelFree": "\u514d\u8d39",
     "HeaderSelectAudio": "\u9009\u62e9\u97f3\u9891",
     "HeaderSelectSubtitles": "\u9009\u62e9\u5b57\u5e55",
-    "ButtonMarkForRemoval": "\u4ece\u8bbe\u5907\u4e2d\u6807\u8bb0\u5220\u9664",
-    "ButtonUnmarkForRemoval": "\u4ece\u8bbe\u5907\u4e2d\u53d6\u6d88\u6807\u8bb0\u5220\u9664",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and Low reduce the allowed bitrate.",
+    "ButtonMarkForRemoval": "Remove from device",
+    "ButtonUnmarkForRemoval": "Cancel removal from device",
+    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate.",
     "LabelDefaultStream": "(\u9ed8\u8ba4)",
     "LabelForcedStream": "(\u5f3a\u5236)",
     "LabelDefaultForcedStream": "(\u9ed8\u8ba4\/\u5f3a\u5236)",
@@ -212,6 +215,8 @@
     "MessageConfirmRestart": "\u4f60\u786e\u5b9a\u5e0c\u671b\u91cd\u542fMedia Browser\u670d\u52a1\u5668\uff1f",
     "MessageConfirmShutdown": "\u4f60\u786e\u5b9a\u5e0c\u671b\u5173\u95edMedia Browser\u670d\u52a1\u5668\uff1f",
     "ButtonUpdateNow": "\u73b0\u5728\u66f4\u65b0",
+    "ValueItemCount": "{0} item",
+    "ValueItemCountPlural": "{0} items",
     "NewVersionOfSomethingAvailable": "\u4e00\u4e2a\u65b0\u7684\u7248\u672c {0} \u53ef\u7528!",
     "VersionXIsAvailableForDownload": "\u7248\u672c {0} \u73b0\u5728\u5df2\u7ecf\u53ef\u4ee5\u4e0b\u8f7d\u3002",
     "LabelVersionNumber": "\u7248\u672c {0}",
